tests/unary_ops/invalid/wrong_order.su
s32 main() {
    return 4-;
}